--- a/css/import/import.css
+++ b/css/import/import.css
@@ -215,15 +215,12 @@
     padding: 1rem;
     display: flex;
     flex-direction: row;
-    gap: 5rem;
+    gap: 2rem;
     align-items: center;
     cursor: pointer;
 
-    & #sec-id {
-      min-width: 200px;
-      height: 1rem;
-      border: none;
-      font-weight: bold;
+    & #sec-dom-selector {
+      min-width: 240px;
     }
 
     & #sec-color {
@@ -234,7 +231,7 @@
     }
 
     & #sec-layout {
-      flex-shrink: 0;
+      width: 107px;
     }
   }
 }
