--- a/css/import/import.css
+++ b/css/import/import.css
@@ -197,7 +197,7 @@
 /* sections mapping */
 .import-express #mapping-editor {
   /* Show 'up' button, or color swatch. */
-  & .row:first-child .move-up {
+  & .row:first-child div:has(.move-up) {
     display: none;
   }
 
@@ -211,7 +211,7 @@
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    align-items: center;
+    align-items: top;
     cursor: pointer;
 
     & #sec-dom-selector {
