Custom variants - Change 'metadata' to be a general customization area - move "Download" buttons lower (not really front and center while doing the mapping) - move some things to be more globally accessible - add 'variants' textfield

--- a/css/import/import.css
+++ b/css/import/import.css
@@ -214,8 +214,13 @@
     align-items: top;
     cursor: pointer;
 
-    & #sec-dom-selector {
+    & #sec-dom-selector,
+    & #sec-dom-variants {
       min-width: 240px;
+    }
+
+    & #sec-dom-mapping {
+      min-width: 192px;
     }
 
     & #sec-color {
