--- a/css/import/free.mappings.css
+++ b/css/import/free.mappings.css
@@ -1,6 +1,12 @@
 /* Express styles */
 .import-express #sm-free-mappings-container {
 
+  & #sm-free-mappings-editor {
+    max-height: 50rem;
+    overflow: auto;
+    background-color: var(--spectrum-alias-background-color-secondary);
+  }
+
   /* Show 'up' button, or color swatch. */
   & .row:first-child div:has(.move-up) {
     display: none;
@@ -35,6 +41,7 @@
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
+      row-gap: 2px;
       min-width: 240px;
 
       & > div {
