--- a/css/express/customization.css
+++ b/css/express/customization.css
@@ -1,6 +1,7 @@
 @import url("../libs/vendors/codemirror/base16-dark.css");
 
-.import-express #metadata-editor {
+.import-express #metadata-editor,
+.import-express #exclusions-editor {
   height: calc(100vh - 232px);
 
   & #metadata-editor-rows {
