feat: SITES-23367: [Importer] Use Spacecat service with bulk imports
- add delete job

--- a/css/import/import.css
+++ b/css/import/import.css
@@ -197,3 +197,7 @@
 .import #import-result div:has(#import-job-picker) {
   margin-bottom: 12px;
 }
+
+.import #import-result #import-job-picker {
+  margin-right: 8px;
+}
