--- a/css/import/import.css
+++ b/css/import/import.css
@@ -1,14 +1,14 @@
 @import url("../libs/vendors/codemirror/codemirror.css");
 @import url("../libs/vendors/codemirror/base16-dark.css");
+@import url("./import.assistant.css");
 
-:host,
-:root {
+.import {
   /* COLORS */
-  --hlx-import-text-color: #000;
+  --hlx-import-text-color: var(--spectrum-global-color-gray-50);
   --hlx-import-link-color: #0563C1;
   --hlx-import-secondary-heading-color: #434343;
   --hlx-import-tertiary-heading-color: #666;
-  --hlx-import-background-color: #fff;
+  --hlx-import-background-color: var(--spectrum-global-color-gray-800);
   --hlx-import-table-head-background-color: #F5CBCD;
 
   /* FONTS */
@@ -55,12 +55,6 @@
   text-align: right;
   font-style: italic;
   font-size: 12px;
-}
-
-.import sp-theme[color="light"] {
-  width: 100%;
-  background-color: var(--spectrum-global-color-gray-50);
-  color: var(--spectrum-global-color-gray-800);
 }
 
 .import #import-markdown-preview {
