--- a/css/styles.css
+++ b/css/styles.css
@@ -4,18 +4,26 @@
   box-sizing: border-box;
 }
 
-body, sp-theme[color="dark"] {
+body,
+.parent > sp-theme,
+.tool > sp-theme {
+  overflow: hidden;
   min-height: 100vh;
   margin: 0;
-  background-color: var(--spectrum-global-color-gray-50);
-  color: var(--spectrum-global-color-gray-800);
-  font-family: var(--spectrum-global-font-family-base);
 }
 
-body.parent > sp-theme {
-  display: grid; 
-  grid-template-columns: 240px 1fr; 
-  grid-template-rows: 1fr; 
+.parent > sp-theme,
+.tool > sp-theme {
+   background-color: var(--spectrum-global-color-gray-50);
+   color: var(--spectrum-global-color-gray-800);
+   font-family: var(--spectrum-global-font-family-base);
+}
+
+body.parent .main-content {
+  height: calc(100vh - 74px);
+  display: grid;
+  grid-template-columns: 240px 1fr;
+  grid-template-rows: 1fr;
   /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
   grid-template-areas: 'sidebar main';
 }
@@ -49,6 +57,14 @@ h3 {
   visibility: hidden;
 }
 
+/* TOP NAV */
+sp-top-nav > *:first-child {
+  padding-left: 24px;
+}
+sp-top-nav > *:last-child {
+   padding-right: 24px;
+}
+
 /* SIDEBAR */
 aside {
   grid-area: sidebar;
@@ -56,11 +72,12 @@ aside {
   flex-direction: column;
   max-height: 100vh;
   background-color: var(--spectrum-global-color-gray-75);
+  padding-top: 24px;
 }
 
 /* HEADER */
 header {
-  padding: 24px;
+  padding: 24px 0;
 }
 
 header a {
@@ -167,8 +184,8 @@ main .field-group sp-color-handle {
 main .field-cols {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr; 
-  gap: 0 12px; 
+  grid-template-rows: 1fr;
+  gap: 0 12px;
   margin-top: 12px;
 }
 
@@ -196,9 +213,9 @@ section .section-title {
 
 section .section-cols {
   display: grid;
-  grid-template-columns: 3fr 4fr; 
-  grid-template-rows: 1fr; 
-  gap: 0 40px; 
+  grid-template-columns: minmax(200px, 500px) minmax(200px, auto);
+  grid-template-rows: 1fr;
+  gap: 0 40px;
 }
 
 section .section-cols .section-col {
@@ -216,11 +233,11 @@ section sp-accordion sp-accordion-item {
 
 section .local-save {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; 
-  grid-template-rows: 1fr; 
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
-section .local-save .option-field + sp-checkbox { 
+section .local-save .option-field + sp-checkbox {
   margin-top: 0;
 }
 
