--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ body,
   margin: 0;
 }
 
+body.loading {
+  display: none;
+}
+
 .parent > sp-theme,
 .tool > sp-theme {
    background-color: var(--spectrum-global-color-gray-50);
@@ -71,7 +75,8 @@ aside {
   display: flex;
   flex-direction: column;
   max-height: 100vh;
-  background-color: var(--spectrum-global-color-gray-75);
+  background-color: var(--spectrum-global-color-gray-100);
+  border-right: 1px solid var(--spectrum-global-color-gray-300);
   padding-top: 24px;
 }
 
