--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,17 @@
   box-sizing: border-box;
 }
 
-body,
+html:has(body > sp-theme[color="dark"]),
+sp-theme[color="dark"] main > iframe {
+  background-color: rgb(29,29,29);
+}
+
+html:has(body > sp-theme[color="light"]),
+sp-theme[color="light"] main > iframe {
+  background-color: rgb(255,255,255);
+}
+
+ body,
 .parent > sp-theme,
 .tool > sp-theme {
   overflow: hidden;
