--- a/css/styles.css
+++ b/css/styles.css
@@ -73,27 +73,27 @@ h3 {
 
 /* TOP NAV */
 sp-top-nav > *:first-child {
-  padding-left: 24px;
+  padding-left: var(--spectrum-global-dimension-size-300);
 }
 
 sp-top-nav > *:last-child {
-   padding-right: 24px;
+   padding-right: var(--spectrum-global-dimension-size-300);
 }
 
 sp-top-nav > div:last-child {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: var(--spectrum-global-dimension-static-size-150);
+  gap: var(--spectrum-global-dimension-size-150);
   margin-inline-start: auto;
 }
 
- sp-top-nav div#authentication-container {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   gap: var(--spectrum-global-dimension-static-size-100);
- }
+sp-top-nav div#authentication-container {
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ gap: var(--spectrum-global-dimension-size-100);
+}
 
 /* SIDEBAR */
 aside {
@@ -106,6 +106,16 @@ aside {
   padding-top: 24px;
 }
 
+nav {
+   flex: 1;
+   overflow-y: auto;
+   padding: 0 24px;
+}
+
+ nav sp-sidenav {
+   width: 100%;
+ }
+
 /* HEADER */
 header {
   padding: 24px 0;
@@ -114,14 +124,14 @@ header {
 header a {
   display: flex;
   align-items: center;
-  gap: var(--spectrum-global-dimension-static-size-100);
+  gap: var(--spectrum-global-dimension-size-100);
   text-decoration: none;
   color: var(--spectrum-global-color-gray-800);
 }
 
- header a i {
+header a i {
    line-height: 0;
- }
+}
 
 sp-theme[color="light"] header a i {
   border: 1px solid #d3d3d3;
@@ -130,17 +140,6 @@ sp-theme[color="light"] header a i {
 
 header h1 {
   margin: 0;
-}
-
-/* SIDE NAV */
-nav {
-  flex: 1;
-  overflow-y: auto;
-  padding: 0 24px;
-}
-
-nav sp-sidenav {
-  width: 100%;
 }
 
 /* FOOTER */
@@ -243,16 +242,26 @@ section {
   height: 100%;
 }
 
-section .section-title {
-  margin-bottom: 12px;
+section > sp-divider {
+  margin-bottom: var(--spectrum-global-dimension-size-150);
 }
 
- section .section-title > div {
+ section .section-title {
+   margin-bottom: var(--spectrum-global-dimension-size-150);
+ }
+
+section .section-title:has(div) {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+section .section-title > div:first-child {
    display: flex;
    flex-direction: row;
    align-items: center;
-   gap: var(--spectrum-global-dimension-static-size-100);
-   margin-bottom: var(--spectrum-global-dimension-static-size-150);;
+   gap: var(--spectrum-global-dimension-size-100);
  }
 
  section .section-title > div h2 {
@@ -260,6 +269,7 @@ section .section-title {
  }
 
 section .section-cols {
+  position: relative;
   display: grid;
   grid-template-columns: minmax(200px, 500px) minmax(200px, auto);
   grid-template-rows: 1fr;
