--- a/css/import/import.assistant.css
+++ b/css/import/import.assistant.css
@@ -6,7 +6,6 @@
   width: 500px;
   height: 100%;
   background-color: var(--spectrum-global-color-gray-100);
-  padding: 0 var(--spectrum-global-dimension-size-350);;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
   transition: right 0.3s ease;
   z-index: 1000;
@@ -17,15 +16,23 @@
 }
 
 .import #assistant-container {
-  margin-top: var(--spectrum-global-dimension-size-250);
+  padding: 0 var(--spectrum-global-dimension-size-300);
 }
 
 .import .import-assistant {
   position: relative;
 }
 
+.import .import-assistant > img {
+  height: 150px;
+  width: calc(100% + calc(2 * var(--spectrum-global-dimension-size-300)));
+  object-fit: cover;
+  margin: 0 calc(-1 * var(--spectrum-global-dimension-size-300));
+}
+
 .import .import-assistant > sp-action-button {
   position: absolute;
+  top: var(--spectrum-global-dimension-size-150);
   right: 0;
 }
 
@@ -33,4 +40,5 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
+  margin-top: var(--spectrum-global-dimension-size-250);
 }
